[package]
name = "d20-space-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.3", features = ["default"] }
tokio = { version = "1.15.0", features = ["full"] }
tower-http = { version = "0.2.0", features = ["fs"] }